--- a/produto/style-produtos.css
+++ b/produto/style-produtos.css
@@ -1,30 +1,39 @@
 body {
-    background-color: rgb(57, 55, 55);
+    background-color: rgb(46, 45, 45);
 }
 
-.list-produto {
+.prateleira {
+    display: flex;
+    justify-content: space-around;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.tipo-cafe {
+    color: rgb(245, 234, 219);
+    text-align: center;
+    margin: 5%;
+}
+
+.tamanho-card {
+    width: 15rem;
+}
+
+.texto-produto {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+
+.imagem-produto {
+    max-width: 50%;
+    margin: auto;
+}
+
+.botao-comprar {
     display: flex;
     justify-content: center;
-    justify-content: space-around;
-}
-
-.card-produto {
-    width: 18rem;
-    border:  2.5px solid rgb(90, 89, 89);
-    border-radius: 5px;
-}
-
-.img-produto {
-    width: 50%;
-    margin: auto;
-}
-
-.descricao-produto {
-    background-color: silver;
-}
-
-.button-comprar {
-    width: 100%;
-    margin: auto;
-    border-radius: 0;
+    text-align: center;
 }
