comit para mensagem de usuario ja existe

--- a/paginas/cadastro.css
+++ b/paginas/cadastro.css
@@ -10,6 +10,8 @@ body{
     color: red;
 }
 
+
+
 #usuarioJaexiste{
     display: none;
     color: red;
@@ -31,4 +33,24 @@ body{
 .card-img-top {
     object-fit: cover; /* Ajusta a imagem para cobrir a área do card */
     height: 200px; /* Define uma altura fixa para a imagem */
+}
+
+#divBotoes{
+    display: inline-block;
+    
+}
+#botaoCadastrar{
+    margin-top: 3px;
+    width: 100px;
+    margin-right: 5px;
+}
+#botaoLogin{
+    margin-top: 3px;
+    width: 100px;
+
+    background-color: red;
+}
+#usuarioCadastrado{
+    display: none;
+    color: green;
 }
