--- a/paginas/styles/cadastro.css
+++ b/paginas/styles/cadastro.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('src/fundoCadastro.jpg');
+    background-image: url('src/fundoCadastro.png');
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat; 
