--- a/paginas/styles/login.css
+++ b/paginas/styles/login.css
@@ -54,17 +54,31 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap:50px;
+    align-items: center;
+    gap:20px;
     width: 100%;
+    padding-bottom: 30px;
+    .email-input, .senha-input {
+        font-size: medium;
+        width: 15rem;
+        height: 2rem;
+        outline: none;
+        border: none;
+        background-color: rgba(164, 164, 164, 0.276);
+    }
+    .senha-input{
+        margin-left: 1rem;
+    }
 }
 
-.email-login,.senha-login{
+.email-login{
     display: flex;
     flex-direction: column;
 }
 
-.show-eye {
+.senha-login {
     display:inline-flex;
+    padding-bottom: 20px;
 }
 
 #mostrarSenha {
@@ -83,8 +97,10 @@ form {
 
 span {
     display: inline-block;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
+    margin-top: 1rem;
+    margin-left: -3.5rem;
     img {
         width: 100%;
         height: 100%;
