--- a/paginas/styles/login.css
+++ b/paginas/styles/login.css
@@ -25,12 +25,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-direction: row;
+    flex-direction: row-;
     width: 50vw;
     height: 70vh;
     border-radius: 1.2vi;
     z-index: 999999999;
     box-shadow: 4px 4px 20px 10px rgba(0, 0, 0, 0.639);
+    transition: ease-in-out 0.5s;
 }
 
 h1 {
@@ -48,9 +49,10 @@ h1 {
     gap: 50px;
     height: 100%;
     width: 100%;
+    transition: ease-in-out 0.5s;
 }
 
-form {
+.login-side form {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -65,6 +67,7 @@ form {
         outline: none;
         border: none;
         background-color: rgba(164, 164, 164, 0.276);
+        border-radius: 3px;
     }
     .senha-input{
         margin-left: 1rem;
@@ -150,6 +153,58 @@ a:hover {
 
 .cadastro-side {
     display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 100%;
+    width: 100%;
+    transition:ease-in-out 0.5s;
+    form{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap:20px;
+        width: 100%;
+        padding-bottom: 30px;
+        .nome-input, .email-input, .senha-input, .confirmar-senha-input {
+            padding: 0 5px 0 5px;
+            font-size: medium;
+            width: 15rem;
+            height: 2rem;
+            outline: none;
+            border: none;
+            background-color: rgba(164, 164, 164, 0.276);
+            border-radius: 3px;
+        }
+    }
+}
+
+.nome-cadsatro,.email-cadsatro,.senha-cadsatro,.confirmar-senha-cadsatro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+#checkbox {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    box-sizing: border-box;
+    
+}
+
+
+.mostrar-senha {
+    margin-top: 0.7rem;
+    display: flex;
+    width: 16rem;
+    align-items: center;
+    font-family:"Merriweather", sans-serif;
+    font-size: small;
+
 }
 
 aside {
