--- a/paginas/styles/login.css
+++ b/paginas/styles/login.css
@@ -44,7 +44,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    margin-left:-6rem;
+    margin-left:-6vw;
     a {
         background-color:var(--button_color) ;
         text-decoration: none;
@@ -52,13 +52,13 @@ body {
         height: 3rem;
         display: grid;
         border-radius: 0.5rem;
-        margin-bottom: 8rem;
+        margin-bottom: 17vh;
         img {
             place-self: center;
         }
     }
     h1 {
-        margin-left: -2rem;
+        margin-left: -2vw;
     }
 }
 
@@ -213,7 +213,7 @@ a:hover {
 }
 
 .top-side-cadastro {
-    margin-top: 1rem;
+    margin-top: 3vh;
     a {
         background-color:var(--button_color) ;
         text-decoration: none;
@@ -221,7 +221,7 @@ a:hover {
         height: 3rem;
         display: grid;
         border-radius: 0.5rem;
-        margin-left: -4rem;
+        margin-left: -4vw;
         img {
             place-self: center;
         }
