--- a/paginas/styles/login.css
+++ b/paginas/styles/login.css
@@ -52,7 +52,8 @@ body {
         height: 3rem;
         display: grid;
         border-radius: 0.5rem;
-        margin-bottom: 17vh;
+        margin-top: 2vh;
+        margin-bottom: 15vh;
         img {
             place-self: center;
         }
@@ -72,7 +73,7 @@ h1 {
 .login-side {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 50px;
     height: 100%;
