--- a/paginas/styles/cadastroProduto.css
+++ b/paginas/styles/cadastroProduto.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url('src/fundoCadastro.jpg');
+    background-image: url('../src/fundo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
