--- a/paginas/styles/cadastroProduto.css
+++ b/paginas/styles/cadastroProduto.css
@@ -1,18 +1,22 @@
-html {
-    width: 100%;
-    height: 100%;
-}
-
 body{
     background-image: url('../src/fundo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100dvw;
+    height: 100dvh;
 }
 
 #IdImagem{
     max-width: 150px;
 }
 .blur {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    background-color: rgba(0, 0, 0, 0.349);
+    transform: translate(-50%, -50%);
+    z-index: -1;
+    filter: blur(2px);
     width: 100%;
     height: 100%;
 }
