--- a/paginas/styles/cadastroProduto.css
+++ b/paginas/styles/cadastroProduto.css
@@ -1,8 +1,12 @@
 body{
     background-image: url('../src/fundo.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
-    width: 100dvw;
-    height: 100dvh;
+
+}
+#botaoVoltar{
+    background-color: red;
+    color: white;
 }
 
 #IdImagem{
@@ -15,37 +19,4 @@ td {
 
 th{
     font-size: 30px;
-}
-
-#thId{
-    border-top-left-radius: 20px;
-}
-#thAcoes{
-    border-top-right-radius: 20px;
-
-}
-
-#productTable :last-child #tdBotoesEditarExcluir{
-    border-bottom-right-radius: 20px;
-
-}
-#productTable :last-child #tdIdCorpo{
-    border-bottom-left-radius: 20px;
-
-}
-#botaoEditar,#botaoExcluir{
-    font-size: 20px;
-}
-
-
-.blur {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    background-color: rgba(0, 0, 0, 0.142);
-    transform: translate(-50%, -50%);
-    z-index: -1;
-    filter: blur(2px);
-    width: 100%;
-    height: 100%;
 }
