--- a/paginas/styles/cadastroProduto.css
+++ b/paginas/styles/cadastroProduto.css
@@ -1,12 +1,14 @@
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body{
     background-image: url('../src/fundo.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-
-}
-#botaoVoltar{
-    background-color: red;
-    color: white;
+    width: 100dvw;
+    height: 100dvh;
 }
 
 #IdImagem{
