--- a/paginas/styles/newproduct.css
+++ b/paginas/styles/newproduct.css
@@ -6,17 +6,18 @@ html {
 }
 
 body {
-    background-color: var(--Brown);
+    background-color: var(--marrom);
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 100%;
     margin: 0;
+    font-family: Merriweather, sans-serif;
 }
 
 :root {
     --creme:      rgb(232, 224, 209);
-    --Brown:      rgb(121, 77, 41);
+    --marrom:      rgb(121, 77, 41);
     --bege-claro: rgb(255, 213, 184);
     --bege:       rgb(244, 204, 176);
     --bege-escuro:rgb(218, 183, 157);
@@ -31,7 +32,7 @@ body {
     align-items: center;
     gap: 1vi;
     width: 18vi;
-    box-shadow: ;
+    box-shadow: 3px 0px rgba(0, 0, 0, 0.213); ;
 
     img {
         width: 18vi;
@@ -48,24 +49,38 @@ body {
 
     a {
         font-size: 1.5vi;
-        color:var(--bege);
+        color:var(--marrom);
         text-decoration: none;
         width: 100%;
         text-align: center;
-        border-top: 0.1vi  solid var(--bege);
-        border-bottom: 0.1vi  solid var(--bege);
+        border-top: 0.1vi  solid var(--bege-escuro);
+        border-bottom: 0.1vi  solid var(--bege-escuro);
     }
 
     a:hover {
         background-color:rgb(142, 91, 49) ;
-        transform: scale(1.1);
-        width: 91%;
         color:var(--bege-claro);
     }
     a:active {
-        background-color: rgb(116, 75, 41);
         transform: scale(0.9);
         width: 111%;
-        color:var(--bege-escuro);
+    }
+}
+
+.right-side {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1vi;
+    width: 100%;
+    height: 100%;
+
+    .upper-side {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: start;
+        width: 100%;
+        height: 10%;
     }
 }
