--- a/paginas/styles/newproduct.css
+++ b/paginas/styles/newproduct.css
@@ -148,3 +148,26 @@ body {
         }
     }
 }
+
+.modal-new {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .fundo {
+        width: 100%;
+        height: 100%;
+        background-color: rgba(120, 120, 120, 0.189);
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        .modal {
+            background-color: var(--creme);
+            margin-top: 3vi;
+            width: 30%;
+            height: 50%;
+        }
+    }
+}
