--- a/paginas/styles/newproduct.css
+++ b/paginas/styles/newproduct.css
@@ -159,15 +159,41 @@ body {
     .fundo {
         width: 100%;
         height: 100%;
-        background-color: rgba(120, 120, 120, 0.189);
+        background-color: rgba(0, 0, 0, 0.189);
         display: flex;
         justify-content: center;
         align-items: start;
         .modal {
             background-color: var(--creme);
-            margin-top: 3vi;
+            margin-top: 2.5vi;
             width: 30%;
-            height: 50%;
+            height: 55%;
+            border-radius: 1vi;
+            .modal-header {
+                display:flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0.5vi;
+                height: 13% ;
+                h2 {
+                    margin:0;
+                }
+                button {
+                    border: none;
+                    background-color: transparent;
+                    img {
+                        width: 2.5vi;
+                        filter: invert(50%);
+                    }
+                }
+                button:hover {
+                    cursor: pointer;
+                    img {
+                        filter: invert(30%);
+                    };
+                }
+            }
         }
     }
 }
