--- a/paginas/styles/login.css
+++ b/paginas/styles/login.css
@@ -205,7 +205,7 @@ a:hover {
         width: 100%;
         height: 100%;
         margin-bottom: 1rem;
-        .nome-input, .email-input, .senha-input, .confirmar-senha-input {
+        .nome-input,.sobrenome-input, .email-input, .senha-input, .confirmar-senha-input {
             padding: 0 5px 0 5px;
             font-size: 1vi;
             width: 16vi;
@@ -236,7 +236,7 @@ a:hover {
     }
 }
 
-.nome-cadsatro,.email-cadsatro,.senha-cadsatro,.confirmar-senha-cadsatro {
+.nome-cadsatro,.sobrenome-cadsatro,.email-cadsatro,.senha-cadsatro,.confirmar-senha-cadsatro {
     display: flex;
     flex-direction: column;
     align-items: center;
