--- a/paginas/styles/cardapio.css
+++ b/paginas/styles/cardapio.css
@@ -7,11 +7,12 @@ body {
 }
 
 .produtoText {
-    height: 50px;
-    overflow: hidden;
-    text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2; /* Mostra duas linhas inicialmente */
+    transition: all 0.3s ease; /* Transição suave ao expandir/recolher */
 }
 
 .arquivo-icon {
