--- a/paginas/styles/paginainicial.css
+++ b/paginas/styles/paginainicial.css
@@ -1,78 +1,12 @@
-body{
-    background-image: url('./src/fundo.jpg');
-    background-size: cover;
-}
 
 
 
-#cabec{
-    background-color:  rgb(121, 77, 41) !important;;
-}
-
-#footer{
-    bottom: 5px;
-}
 
 
-#footer{
-    background-color: transparent  !important;
-}
 
-.divSecoes {
-    display: flex;
-    flex-direction: column; /* Alinha itens verticalmente */
-    justify-content: center; /* Centraliza itens verticalmente */
-    align-items: center; /* Centraliza itens horizontalmente */
-    height: 100%; /* Faz com que a div ocupe toda a altura da coluna */
-    text-align: center; /* Alinha o texto ao centro */
-}
 
-.divSecoes img {
-    width: 100%; /* Ajusta a imagem para preencher a largura da div pai */
-    height: auto; /* Mantém a proporção da imagem */
-    max-width: 100%; /* Garante que a imagem não exceda a largura da div pai */
-    display: block; /* Remove o espaçamento extra abaixo da imagem */
-} 
 
-.texto-cafe {
-    background-color:  rgb(121, 77, 41);
-    color:white;
-}
-
-.cafearabica {
-    width: 100%;;
-    height: 400px;
-}
-
-.carousel-caption {
-    padding-top: 10px;
-}
-
-.logo {
-    width: 100px;
-    height: 85px;
-}
-
-.navbar {
-    background-color: #e8e0d0;
-}
-
-.titulocafe {
-    z-index: 1;
-    height: 35px;
-}
-.textocafes {
-    height: 60px;
-}
-
-.texto {
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 5%;
-    padding: 1%;
-}
-
+/* CAROUSEL*/
 .slider {
     margin: 0 auto;
     width: 800px;
@@ -167,10 +101,5 @@ body{
 #radio4:checked ~ .navigation-auto .auto-btn4 {
     background-color: white;
 }
-
-.imagem2 {
-    height: 20p;
-}
-
-
+/*FIM DO CAROUSEL*/
 
