--- a/paginas/styles/newproduct.css
+++ b/paginas/styles/newproduct.css
@@ -156,17 +156,30 @@ input[type="number"]::-webkit-outer-spin-button {
             }
         }
         #categoriaProduto {
+            width: 9%;
             border: none;
+            border-radius: 0.3vi;
+            appearance:none;
+            background-image:url("../src/arrow-down-svgrepo-com.svg");
+            background-repeat: no-repeat;
+            background-position: right 0.3rem top 50%;
+            background-size: 0.8rem auto;
         }
         #categoriaProduto:hover{
             cursor:pointer;
         }
-        #categoriaProduto:active{
-            background-color: var(--intermediario);
-        }
         #categoriaProduto:focus {
             border: none;
             outline: none;
+        }
+        #categoriaProduto>option {
+            background-color: var(--cremeescuro);
+        }
+        .arrowDown {
+            width: 1.5vi;
+            height: 1.5vi;
+            margin: 0 0 0 0.3vi;
+            cursor: pointer;
         }
         #Produto {
             background-color: var(--creme);
@@ -222,6 +235,18 @@ input[type="number"]::-webkit-outer-spin-button {
                 }
                 tr:last-child td:last-child{
                     border-bottom-right-radius: 1vi;
+                }
+            }
+            tbody>tr>td:last-child{
+                button{
+                    border: none;
+                    border-radius: 0.5vi;
+                    width: 3vi;
+                    height: 3vi;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
             }
         }
